# turboquant-rag

./: .gitignore  README.md  demo.py  pyproject.toml
experiments/: E01-explore_data.ipynb  E02-create_embeddings.ipynb  E03-create_embeddings_w_pyarrow.ipynb  E04-creating_beta_dist_codebook.ipynb  E05-tsne_raw_embeddings.ipynb  E07-embedding_quantization.ipynb  E08-mse_only_lookup_table.ipynb  E09-dequantisation_unrotate.ipynb  E10-quick_look_at_qjl_results.ipynb  E11-test_turboquant_rag_client.ipynb
lib/: algorithms.py  create_codebook.py  create_embeddings.py  create_quantized_embeddings.py  download_all_resources.py  download_arxiv.py  helpers.py
lib/turboquant/: __init__.py  turboquant.py
scripts/: download_arxiv.py
static/: style.css
